# fantastic-succotash

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
onsetto-client/: README.md  pyproject.toml
onsetto-client/src/onsetto_client/: __init__.py  __main__.py  client.py  config.py  exceptions.py  logging.py  luhn.py
onsetto-client/src/onsetto_client/models/: __init__.py  base.py  enums.py  input_models.py  output_models.py  secret_fields.py
onsetto-client/tests/: conftest.py  test_auth.py  test_client.py  test_logging.py  test_main.py  test_models.py
onsetto-scraper/: README.md  pyproject.toml
onsetto-scraper/src/onsetto_scraper/: __init__.py  __main__.py  config.py  exceptions.py  logging.py  luhn.py  scraper.py
onsetto-scraper/src/onsetto_scraper/models/: __init__.py  banking.py  payment.py
onsetto-scraper/src/onsetto_scraper/pages/: __init__.py  account_page.py  base_page.py  login_page.py  mfa_page.py  orders_page.py
onsetto-scraper/tests/: conftest.py  test_account_flow.py  test_config.py  test_logging.py  test_luhn.py  test_main.py  test_models.py  test_pages.py
