[project]
name = "onsetto"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/onsetto-scraper",
    "packages/onsetto-client",
]

[tool.uv.sources]
onsetto-scraper = { workspace = true, editable = true }
onsetto-client = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "onsetto-client",
    "onsetto-scraper",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
