[project]
name = "onsetto"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "onsetto-client",
    "onsetto-scraper",
]

[tool.uv.sources]
onsetto-client = { workspace = true, editable = true }
onsetto-scraper = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "onsetto-client",
    "onsetto-scraper",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.35",
    "pytest-playwright>=0.6",
    "ruff>=0.15.18",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
mypy_path = "onsetto-client/src:onsetto-scraper/src"
