[project]
name = "onsetto-scraper"
version = "0.1.0"
description = "A Playwright scraper for Onsetto's technical challenge."
readme = "README.md"
authors = [
    { name = "Will Mooney", email = "will.mooney.3@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
